updating tests, configurations

--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -7,5 +7,6 @@
         "removeComments": false,
         "sourceMap": true,
         "declaration": true,
+        "downlevelIteration": true,
     }
 }
