--- a/tsconfig-es.json
+++ b/tsconfig-es.json
@@ -4,8 +4,7 @@
 		"module": "es6",
 		"target": "es6",
 		"lib": ["dom", "esnext"],
-		"outDir": "lib/es",
-		"composite": true
+		"outDir": "lib/es"
 	},
 	"exclude": ["node_modules", "lib", "samples", "test/development"],
 	"include": ["./src/**/*.ts", "./test/**/*.ts"]
