--- a/package.json
+++ b/package.json
@@ -29,11 +29,9 @@
 		"shims.d.ts"
 	],
 	"scripts": {
-		"build": "npm run pre-build && npm run build:sub_cjs && npm run build:sub_es && rollup -c",
+		"build": "npm run pre-build && npm run build:cjs && npm run build:es && rollup -c",
 		"build:cjs": "tsc --p tsconfig-cjs.json",
 		"build:es": "tsc --p tsconfig-es.json",
-		"build:sub_cjs": "tsc -b tsconfig-sub-cjs.json",
-		"build:sub_es": "tsc -b tsconfig-sub-es.json",
 		"format": "npm run format:css && npm run format:html && npm run format:js && npm run format:json && npm run format:md && npm run format:rc && npm run format:ts",
 		"format:css": "prettier --write \"**/*.css\"",
 		"format:html": "prettier --write \"**/*.html\"",
@@ -49,10 +47,10 @@
 		"pre-build": "npm run setVersion",
 		"setVersion": "gulp setVersion",
 		"test": "npm run test:cjs && npm run test:esm",
-		"test:cjs": "npm run build:sub_cjs   && mocha  'lib/test/common/**/*.js' --require  isomorphic-fetch &&  mocha  'lib/test/node/**/*.js' --require  isomorphic-fetch",
+		"test:cjs": "npm run build:cjs   && mocha  'lib/test/common/**/*.js' --require  isomorphic-fetch &&  mocha  'lib/test/node/**/*.js' --require  isomorphic-fetch",
 		"test:coverage": "TS_NODE_PROJECT='./tsconfig-cjs.json' nyc mocha --require isomorphic-fetch -r ts-node/register test/common/**/*.ts && mocha --require isomorphic-fetch -r ts-node/register test/common/**/*.ts",
 		"test:development": "tsc --p test/tsconfig-test-development.json &&  mocha  'lib/test/development/**/*.js' --require  isomorphic-fetch",
-		"test:esm": "npm run build:sub_es  && mocha  'lib/es/test/common/**/*.js' --require  esm --require  isomorphic-fetch &&  mocha  'lib/es/test/node/**/*.js' --require  esm --require  isomorphic-fetch"
+		"test:esm": "npm run build:es  && mocha  'lib/es/test/common/**/*.js' --require  esm --require  isomorphic-fetch &&  mocha  'lib/es/test/node/**/*.js' --require  esm --require  isomorphic-fetch"
 	},
 	"nyc": {
 		"all": true,
@@ -87,8 +85,8 @@
 		"@types/mocha": "^9.0.0",
 		"@types/node": "^17.0.13",
 		"@types/sinon": "^10.0.8",
-		"@typescript-eslint/eslint-plugin": "^4.0.0",
-		"@typescript-eslint/parser": "^3.8.0",
+		"@typescript-eslint/eslint-plugin": "^4.1.0",
+		"@typescript-eslint/parser": "^4.1.0",
 		"chai": "^4.2.0",
 		"eslint": "^7.19.0",
 		"eslint-config-prettier": "^8.3.0",
