--- a/packages/testLibraries/package.json
+++ b/packages/testLibraries/package.json
@@ -10,6 +10,6 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "graph-service-library": "*"
+        "msgraph-javascript-sdk": "*"
     }
 }
