--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@microsoft/microsoft-graph-client",
-	"version": "3.0.0-Preview.3",
+	"version": "4.0.0-Preview.1",
 	"description": "Microsoft Graph Client Library",
 	"keywords": [
 		"Microsoft",
@@ -65,18 +65,18 @@
 		]
 	},
 	"dependencies": {
-		"@babel/runtime": "^7.12.5",
-		"@microsoft/kiota-abstractions": "1.0.29",
+		"@microsoft/kiota-abstractions": "^1.0.0-preview.1",
+		"@microsoft/kiota-http-fetchlibrary": "^1.0.0-preview.1",
 		"tslib": "^2.2.0"
 	},
 	"devDependencies": {
 		"@azure/identity": "^2.0.1",
 		"@azure/msal-browser": "^2.15.0",
 		"@babel/core": "^7.12.10",
+        "@babel/runtime": "^7.12.5",
 		"@babel/plugin-transform-runtime": "^7.12.10",
 		"@babel/preset-env": "^7.12.11",
 		"@istanbuljs/nyc-config-typescript": "^1.0.1",
-		"@microsoft/kiota-authentication-azure": "1.0.7",
 		"@microsoft/microsoft-graph-types": "^2.11.0",
 		"@rollup/plugin-babel": "^5.2.2",
 		"@rollup/plugin-commonjs": "^21.0.1",
