--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
 		"karma": "karma  start --single-run --browsers ChromeHeadless karma.conf.js",
 		"lint": "eslint . --ext .ts",
 		"lint:fix": "eslint . --ext .ts --fix",
-		"prepack": "npm install && npm run build && npm run test",
+		"prepack": "npm install && npm run build",
 		"pre-build": "npm run setVersion",
 		"setVersion": "gulp setVersion",
 		"test": "npm run test:cjs && npm run test:esm",
@@ -73,9 +73,9 @@
 		"@azure/identity": "^2.0.1",
 		"@azure/msal-browser": "^2.15.0",
 		"@babel/core": "^7.12.10",
-        "@babel/runtime": "^7.12.5",
 		"@babel/plugin-transform-runtime": "^7.12.10",
 		"@babel/preset-env": "^7.12.11",
+		"@babel/runtime": "^7.12.5",
 		"@istanbuljs/nyc-config-typescript": "^1.0.1",
 		"@microsoft/microsoft-graph-types": "^2.11.0",
 		"@rollup/plugin-babel": "^5.2.2",
