--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
 		"@babel/preset-env": "^7.12.11",
 		"@babel/runtime": "^7.12.5",
 		"@istanbuljs/nyc-config-typescript": "^1.0.1",
-		"@microsoft/microsoft-graph-types": "^2.11.0",
+		"@microsoft/microsoft-graph-types": "file:microsoft-microsoft-graph-types-3.0.0-RestPreview.1.tgz",
 		"@rollup/plugin-babel": "^5.2.2",
 		"@rollup/plugin-commonjs": "^21.0.1",
 		"@rollup/plugin-node-resolve": "^13.1.3",
