--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@microsoft/microsoft-graph-client",
-	"version": "4.0.0-Preview.1",
+	"version": "4.0.0-RestPreview.1",
 	"description": "Microsoft Graph Client Library",
 	"keywords": [
 		"Microsoft",
@@ -26,7 +26,31 @@
 		"lib/",
 		"src/",
 		"authProviders/",
-		"shims.d.ts"
+		"shims.d.ts",
+		"applications",
+		"calendars",
+		"changeNotifications",
+		"compliance",
+		"crossDeviceExperiences",
+		"customerBooking",
+		"customerBooking",
+		"deviceAppManagement",
+		"education",
+		"extensions",
+		"files",
+		"groups",
+		"identityAndAccess",
+		"mail",
+		"notes",
+		"personalContacts",
+		"reports",
+		"search",
+		"security",
+		"sitesAndLists",
+		"tasksAndPlans",
+		"to-doTasks",
+		"users",
+		"workbooksAndCharts"
 	],
 	"scripts": {
 		"build": "npm run pre-build && npm run build:cjs && npm run build:es && rollup -c",
@@ -67,6 +91,7 @@
 	"dependencies": {
 		"@microsoft/kiota-abstractions": "^1.0.0-preview.5",
 		"@microsoft/kiota-http-fetchlibrary": "^1.0.0-preview.6",
+		"@microsoft/microsoft-graph-types": "file:microsoft-microsoft-graph-types-3.0.0-RestPreview.1.tgz",
 		"tslib": "^2.2.0"
 	},
 	"devDependencies": {
@@ -77,7 +102,6 @@
 		"@babel/preset-env": "^7.12.11",
 		"@babel/runtime": "^7.12.5",
 		"@istanbuljs/nyc-config-typescript": "^1.0.1",
-		"@microsoft/microsoft-graph-types": "file:microsoft-microsoft-graph-types-3.0.0-RestPreview.1.tgz",
 		"@rollup/plugin-babel": "^5.2.2",
 		"@rollup/plugin-commonjs": "^21.0.1",
 		"@rollup/plugin-node-resolve": "^13.1.3",
