--- a/.azure-pipelines/ci-build-production.yml
+++ b/.azure-pipelines/ci-build-production.yml
@@ -35,18 +35,17 @@ stages:
         versionSpec: $(NODE_VERSION)
       displayName: 'Install Node.js'
 
-    - script: |
-        npm ci
-        npm run build
-        npm run test
-        npm run karma
+    - script: npm ci
+    - script: npm run build
+    - script: npm run test
+    - script: npm run karma
       displayName: 'Test the branch'
 
     - task: PublishTestResults@2
       displayName: 'Publish Unit Test Results'
       inputs:
           testResultsFormat: 'JUnit'
-          testResultsFiles: 'testResult.xml'
+          testResultsFiles: '**/testResult.xml'
           failTaskOnFailedTests: true
 
     - template: ./common-templates/security-post-checks.yml
