--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "shims.d.ts"
     ],
     "scripts": {
-        "build": "npm run pre-build && npm run build:sub_cjs && npm run build:sub_es && rollup -c",
+        "build": "npm run pre-build && npm run build:sub_cjs && npm run build:sub_es && rollup --bundleConfigAsCjs -c",
         "build:cjs": "tsc --p tsconfig-cjs.json",
         "build:es": "tsc --p tsconfig-es.json",
         "build:sub_cjs": "tsc -b tsconfig-sub-cjs.json",
@@ -55,12 +55,22 @@
         "test:esm": "npm run build:sub_es  && mocha --require esm"
     },
     "mocha": {
-        "reporter": ["mocha-junit-reporter"],
+        "reporter": [
+            "mocha-junit-reporter"
+        ],
         "reporterOptions": {
             "mochaFile": "./testResult.xml"
         },
-        "spec": ["lib/test/common/**/*.js", "lib/test/node/**/*.js", "lib/es/test/common/**/*.js", "lib/es/test/node/**/*.js"],
-        "require": ["isomorphic-fetch","esm"]
+        "spec": [
+            "lib/test/common/**/*.js",
+            "lib/test/node/**/*.js",
+            "lib/es/test/common/**/*.js",
+            "lib/es/test/node/**/*.js"
+        ],
+        "require": [
+            "isomorphic-fetch",
+            "esm"
+        ]
     },
     "nyc": {
         "all": true,
@@ -89,6 +99,7 @@
         "@rollup/plugin-babel": "^6.0.0",
         "@rollup/plugin-commonjs": "^24.0.0",
         "@rollup/plugin-node-resolve": "^15.0.0",
+        "@rollup/plugin-terser": "^0.2.1",
         "@types/chai": "^4.2.14",
         "@types/mocha": "^9.0.0",
         "@types/node": "^18.0.0",
@@ -116,8 +127,7 @@
         "mocha-junit-reporter": "^2.1.1",
         "nyc": "^15.1.0",
         "prettier": "^2.5.1",
-        "rollup": "^2.36.2",
-        "rollup-plugin-terser": "^7.0.2",
+        "rollup": "^3.9.1",
         "sinon": "^15.0.0",
         "source-map-support": "^0.5.19",
         "stream-browserify": "^3.0.0",
