Mocha version update (#1131)
* update mocha and introduce esm test project

* update ci step

* remove run ci

--- a/.github/workflows/ci_validation.yml
+++ b/.github/workflows/ci_validation.yml
@@ -32,3 +32,10 @@ jobs:
     
     - name: Run unit tests
       run: npm test
+
+    - name: Verify ESM compatibility
+      if: matrix.node-version == '16.x'
+      working-directory: './test-esm'
+      run: |
+        npm ci
+        npm test
