--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "lib/",
         "src/",
         "authProviders/",
-        "shims.d.ts"
+        "shims.d.ts",
+        "authProviderOptions"
     ],
     "scripts": {
         "build": "npm run pre-build && npm run build:sub_cjs && npm run build:sub_es && rollup --bundleConfigAsCjs -c",
