--- a/.azure-pipelines/ci-build-production.yml
+++ b/.azure-pipelines/ci-build-production.yml
@@ -24,6 +24,10 @@ stages:
           NODE_VERSION: '14.x'
         Node 16:
           NODE_VERSION: '16.x'
+        Node 18:
+          NODE_VERSION: '18.x'
+        Node 20:
+          NODE_VERSION: '20.x'
       maxParallel: 2 
     steps:
     - template: ./common-templates/security-pre-checks.yml
