--- a/.github/workflows/ci_validation.yml
+++ b/.github/workflows/ci_validation.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+        node-version: [16.x, 18.x, 20.x]
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
@@ -22,19 +22,13 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
-    - name: Build for node 14 and 16
-      if: matrix.node-version != '12.x'
-      run: npm run build --if-present
-      
-    - name: Build for node 12
-      if: matrix.node-version == '12.x'
-      run: npm run build:cjs && npm run build:es
+    - name: Build for node 16, 18 & 20
+      run: npm run build
     
     - name: Run unit tests
       run: npm test
 
     - name: Verify ESM compatibility
-      if: matrix.node-version == '16.x'
       working-directory: './test-esm'
       run: |
         npm ci
