--- a/.github/workflows/ci_validation.yml
+++ b/.github/workflows/ci_validation.yml
@@ -21,10 +21,10 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Install dependencies
       run: npm ci
-      
+
     - name: Build for node 16, 18 & 20
       run: npm run build
-    
+
     - name: Run unit tests
       run: npm test
 
@@ -33,3 +33,17 @@ jobs:
       run: |
         npm ci
         npm test
+
+  # The check-build-matrix returns success if all matrix jobs in build are successful; otherwise, it returns a failure.
+  # Use this as a PR status check for GitHub Policy Service instead of individual matrix entry checks.
+  check-build-matrix:
+    runs-on: ubuntu-latest
+    needs: build
+    if: always()
+    steps:
+      - name: All build matrix options are successful
+        if: ${{ !(contains(needs.*.result, 'failure')) }}
+        run: exit 0
+      - name: One or more build matrix options failed
+        if: ${{ contains(needs.*.result, 'failure') }}
+        run: exit 1
