chore: update branch protection rules (#1425)
* add matrix build check
* All dev and main branches must have policy
* Require status checks to pass before merging
* Require code owner approvals of all changes in main/master and dev branches
* Require re-approval after new commits
* add CodeQL check

---------

Co-authored-by: Michael Mainer <MIchaelMainer@users.noreply.github.com>

--- a/.github/policies/msgraph-sdk-javascript-branch-protection.yml
+++ b/.github/policies/msgraph-sdk-javascript-branch-protection.yml
@@ -10,7 +10,7 @@ configuration:
   branchProtectionRules:
 
   - branchNamePattern: dev
-    # This branch pattern applies to the following branches as of 06/12/2023 10:31:16:
+    # This branch pattern applies to the following branches as of 08/30/2023:
     # dev
 
     # Specifies whether this branch can be deleted. boolean
@@ -30,14 +30,13 @@ configuration:
     # Are commits required to be signed. boolean. TODO: all contributors must have commit signing on local machines.
     requiresCommitSignatures: false
     # Are conversations required to be resolved before merging? boolean
-    requiresConversationResolution: false
+    requiresConversationResolution: true
     # Are merge commits prohibited from being pushed to this branch. boolean
     requiresLinearHistory: false
     # Required status checks to pass before merging. Values can be any string, but if the value does not correspond to any existing status check, the status check will be stuck on pending for status since nothing exists to push an actual status
     requiredStatusChecks:
-    - build (16.x)
-    - build (18.x)
-    - build (20.x)
+    - check-build-matrix
+    - CodeQL
     # Require branches to be up to date before merging. Requires requiredStatusChecks. boolean
     requiresStrictStatusChecks: true
     # Indicates whether there are restrictions on who can push. boolean. Should be set with whoCanPush.
@@ -46,7 +45,7 @@ configuration:
     restrictsReviewDismissals: false
 
   - branchNamePattern: master
-    # This branch pattern applies to the following branches as of 06/12/2023 10:31:16:
+    # This branch pattern applies to the following branches as of 08/30/2023:
     # master
 
     # Specifies whether this branch can be deleted. boolean
@@ -66,14 +65,13 @@ configuration:
     # Are commits required to be signed. boolean. TODO: all contributors must have commit signing on local machines.
     requiresCommitSignatures: false
     # Are conversations required to be resolved before merging? boolean
-    requiresConversationResolution: false
+    requiresConversationResolution: true
     # Are merge commits prohibited from being pushed to this branch. boolean
     requiresLinearHistory: false
     # Required status checks to pass before merging. Values can be any string, but if the value does not correspond to any existing status check, the status check will be stuck on pending for status since nothing exists to push an actual status
     requiredStatusChecks:
-    - build (16.x)
-    - build (18.x)
-    - build (20.x)
+    - check-build-matrix
+    - CodeQL
     # Require branches to be up to date before merging. Requires requiredStatusChecks. boolean
     requiresStrictStatusChecks: true
     # Indicates whether there are restrictions on who can push. boolean. Should be set with whoCanPush.
@@ -82,7 +80,7 @@ configuration:
     restrictsReviewDismissals: false
 
   - branchNamePattern: 3.0.0
-    # This branch pattern applies to the following branches as of 06/12/2023 10:31:16:
+    # This branch pattern applies to the following branches as of 08/30/2023:
     # 3.0.0
 
     # Specifies whether this branch can be deleted. boolean
@@ -90,22 +88,21 @@ configuration:
     # Specifies whether forced pushes are allowed on this branch. boolean
     allowsForcePushes: false
     # Specifies whether new commits pushed to the matching branches dismiss pull request review approvals. boolean
-    dismissStaleReviews: false
+    dismissStaleReviews: true
     # Specifies whether admins can overwrite branch protection. boolean
     isAdminEnforced: false
     # Require review from Code Owners. Requires requiredApprovingReviewsCount. boolean
-    requireCodeOwnersReview: false
+    requireCodeOwnersReview: true
     # Are commits required to be signed. boolean. TODO: all contributors must have commit signing on local machines.
     requiresCommitSignatures: false
     # Are conversations required to be resolved before merging? boolean
-    requiresConversationResolution: false
+    requiresConversationResolution: true
     # Are merge commits prohibited from being pushed to this branch. boolean
     requiresLinearHistory: false
     # Required status checks to pass before merging. Values can be any string, but if the value does not correspond to any existing status check, the status check will be stuck on pending for status since nothing exists to push an actual status
     requiredStatusChecks:
-    - build (16.x)
-    - build (18.x)
-    - build (20.x)    
+    - check-build-matrix
+    - CodeQL
     # Require branches to be up to date before merging. Requires requiredStatusChecks. boolean
     requiresStrictStatusChecks: true
     # Indicates whether there are restrictions on who can push. boolean. Should be set with whoCanPush.
@@ -114,7 +111,7 @@ configuration:
     restrictsReviewDismissals: false
 
   - branchNamePattern: support/v2
-    # This branch pattern applies to the following branches as of 06/12/2023 10:31:16:
+    # This branch pattern applies to the following branches as of 08/30/2023:
     # support/v2
 
     # Specifies whether this branch can be deleted. boolean
@@ -122,7 +119,7 @@ configuration:
     # Specifies whether forced pushes are allowed on this branch. boolean
     allowsForcePushes: false
     # Specifies whether new commits pushed to the matching branches dismiss pull request review approvals. boolean
-    dismissStaleReviews: false
+    dismissStaleReviews: true
     # Specifies whether admins can overwrite branch protection. boolean
     isAdminEnforced: false
     # Indicates whether "Require a pull request before merging" is enabled. boolean
@@ -130,18 +127,17 @@ configuration:
     # Specifies the number of pull request reviews before merging. int (0-6). Should be null/empty if PRs are not required
     requiredApprovingReviewsCount: 1
     # Require review from Code Owners. Requires requiredApprovingReviewsCount. boolean
-    requireCodeOwnersReview: false
+    requireCodeOwnersReview: true
     # Are commits required to be signed. boolean. TODO: all contributors must have commit signing on local machines.
     requiresCommitSignatures: false
     # Are conversations required to be resolved before merging? boolean
-    requiresConversationResolution: false
+    requiresConversationResolution: true
     # Are merge commits prohibited from being pushed to this branch. boolean
     requiresLinearHistory: false
     # Required status checks to pass before merging. Values can be any string, but if the value does not correspond to any existing status check, the status check will be stuck on pending for status since nothing exists to push an actual status
     requiredStatusChecks:
-    - build (16.x)
-    - build (18.x)
-    - build (20.x)    
+    - check-build-matrix
+    - CodeQL
     # Require branches to be up to date before merging. Requires requiredStatusChecks. boolean
     requiresStrictStatusChecks: true
     # Indicates whether there are restrictions on who can push. boolean. Should be set with whoCanPush.
@@ -150,7 +146,7 @@ configuration:
     restrictsReviewDismissals: false
 
   - branchNamePattern: v2/dev
-    # This branch pattern applies to the following branches as of 06/12/2023 10:31:16:
+    # This branch pattern applies to the following branches as of 08/30/2023:
     # v2/dev
 
     # Specifies whether this branch can be deleted. boolean
@@ -175,9 +171,8 @@ configuration:
     requiresLinearHistory: false
     # Required status checks to pass before merging. Values can be any string, but if the value does not correspond to any existing status check, the status check will be stuck on pending for status since nothing exists to push an actual status
     requiredStatusChecks:
-    - build (16.x)
-    - build (18.x)
-    - build (20.x)
+    - check-build-matrix
+    - CodeQL
     # Require branches to be up to date before merging. Requires requiredStatusChecks. boolean
     requiresStrictStatusChecks: false
     # Indicates whether there are restrictions on who can push. boolean. Should be set with whoCanPush.
@@ -186,7 +181,7 @@ configuration:
     restrictsReviewDismissals: false
 
   - branchNamePattern: main
-    # This branch pattern applies to the following branches as of 06/12/2023 10:31:16:
+    # This branch pattern applies to the following branches as of 08/30/2023:
     # main
 
     # Specifies whether this branch can be deleted. boolean
@@ -194,7 +189,7 @@ configuration:
     # Specifies whether forced pushes are allowed on this branch. boolean
     allowsForcePushes: false
     # Specifies whether new commits pushed to the matching branches dismiss pull request review approvals. boolean
-    dismissStaleReviews: false
+    dismissStaleReviews: true
     # Specifies whether admins can overwrite branch protection. boolean
     isAdminEnforced: false
     # Indicates whether "Require a pull request before merging" is enabled. boolean
@@ -202,18 +197,17 @@ configuration:
     # Specifies the number of pull request reviews before merging. int (0-6). Should be null/empty if PRs are not required
     requiredApprovingReviewsCount: 1
     # Require review from Code Owners. Requires requiredApprovingReviewsCount. boolean
-    requireCodeOwnersReview: false
+    requireCodeOwnersReview: true
     # Are commits required to be signed. boolean. TODO: all contributors must have commit signing on local machines.
     requiresCommitSignatures: false
     # Are conversations required to be resolved before merging? boolean
-    requiresConversationResolution: false
+    requiresConversationResolution: true
     # Are merge commits prohibited from being pushed to this branch. boolean
     requiresLinearHistory: false
     # Required status checks to pass before merging. Values can be any string, but if the value does not correspond to any existing status check, the status check will be stuck on pending for status since nothing exists to push an actual status
     requiredStatusChecks:
-    - build (16.x)
-    - build (18.x)
-    - build (20.x)
+    - check-build-matrix
+    - CodeQL
     # Require branches to be up to date before merging. Requires requiredStatusChecks. boolean
     requiresStrictStatusChecks: true
     # Indicates whether there are restrictions on who can push. boolean. Should be set with whoCanPush.
